# Projet-mail-IA

./: .gitignore  ASSISTANT_COMMERCIAL.md  CLAUDE.md  generateur_devis_3sites.py  mcp_server_devis.py  pyproject.toml  requirements-dev.txt  utils_playwright.py
.github/workflows/: ci.yml
generators/: __init__.py  abri.py  base.py  cloture.py  logging_config.py  pergola.py  studio.py  terrasse.py  wc_helpers.py
prompts/: ASSISTANT_COMMERCIAL.md  FAQ_TECHNIQUE.md
scripts/: analyser_configurateur.py  generateur_devis_3sites.py  generateur_devis_auto.py  inspect_wapf_all.py  inspect_wapf_pergola.py  mcp_server_devis.py  scrape_wpc_studio.py  test_complet_5sites.py  test_date_livraison.py  test_devis_marguet.py  test_plancher_studio.py  test_studio_configurator.py  test_studio_plancher_debug.py  utils_playwright.py
tests/: __init__.py  conftest.py  test_extract_wapf_pergola.py  test_generators.py  test_logging_config.py  test_mcp_server.py  test_pergola_pente_live.py  test_predecoupe_discovery.py  test_studio_menuiserie_positioning.py  test_utils_playwright.py  test_wc_helpers.py
